# ambitionpluginservice

./: .gitignore  CMakeLists.txt
cmake/: Makefile
config/: actions.conf  plugins.conf  pluginservice.conf  pluginservice.conf.example
ddl/: master.sql
src/: Application.vala  CMakeLists.txt  Main.vala
src/Controller/: Plugin.vala  Plugins.vala  Root.vala  Search.vala
src/Controller/Service/: Plugin.vala  Search.vala
src/Entity/: Error.vala  Plugin.vala  Search.vala
src/Form/: PluginGet.vala
src/Model/: Markdown.vala  PSMarkdown.vala
src/Model/DB/: AlmannaLoader.vala  Author.vala  Plugin.vala  PluginDocumentation.vala  PluginHistory.vala  PluginInstall.vala
src/Model/DB/Entity/: Author.vala  Plugin.vala  PluginDocumentation.vala  PluginHistory.vala  PluginInstall.vala
src/Model/DB/Implementation/: Author.vala  Plugin.vala  PluginDocumentation.vala  PluginHistory.vala  PluginInstall.vala
src/View/: JsonView.vala
src/View/JSON/: Search.vala
src/View/Template/Component/: footer.vtmpl  header.vtmpl  navbar.vtmpl  plugin_list.vtmpl
src/View/Template/Plugins/: list.vtmpl  view.vtmpl
src/View/Template/Root/: about.vtmpl  index.vtmpl
src/View/Template/Search/: search.vtmpl
test/: CMakeLists.txt  InitializeTests.vala  ServicePluginTest.vala  ServiceSearchTest.vala
